--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -50,14 +50,16 @@
 
       <div class="content">
       	<div class="row-fluid">
-      		<div class="span3">
-      			{% include learningColumn.md %}
+      		<div class="span9">
+      			<div class="row-fluid">
+      				<div class="span12">
+      					{{ content }}
+      				</div>
+      			</div>
 			</div>
-			<div class="span6">
-      			{{ content }}
-      		</div>
       		<div class="span3">
       			{% include aboutMe.html %}
+				{% include learningColumn.md %}
       		</div>
       	</div>
       </div>
